# population-quiz

./: .gitignore  .pre-commit-config.yaml  create_figures.ipynb  index.html  pyproject.toml  script.js
data/: FEI_CITY_251130201152.csv  data.json
src/prefecture_quiz/: __init__.py
